# piper-rs

./: Cargo.toml
crates/espeak-rs/: Cargo.toml
crates/espeak-rs-sys/: Cargo.toml
crates/piper-rs-cli/: Cargo.toml
crates/sonic-rs-sys/: Cargo.toml
src/: core.rs  lib.rs
src/audio/: synth.rs
