[package]
name = "sonic-rs-sys"
version = "0.1.9"
edition = "2021"
authors = []
description = "Rust bindings to sonic rate boost library"
license = "MIT"
keywords = ["FFI", "sonic", "audio", "tts", "speech"]
categories = ["external-ffi-bindings", "api-bindings"]
repository = "https://github.com/thewh1teagle/piper-rs"
homepage = "https://github.com/thewh1teagle/piper-rs"

include = ["sonic/*.c", "sonic/*.h", "sonic/Makefile", "src/*.rs", "build.rs"]

[build-dependencies]
cc = "1.2.26"
bindgen = { version = "0.72.0", default-features = false, features = ["runtime"] }
